# mateobserve

./: .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml  publish.yml
collector/: alembic.ini  config.py  main.py  pyproject.toml
collector/aggregation/: service.py
collector/alembic/: env.py
collector/alembic/versions/: 001_initial_schema.py
collector/api/: routes.py
collector/storage/: database.py  models.py  queries.py
dashboard/: next.config.js  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/collector/[...path]/: route.ts
dashboard/src/components/: ErrorChart.tsx  LatencyTable.tsx  RecentErrors.tsx  StatCards.tsx  TrafficChart.tsx
dashboard/src/lib/: api.ts
docker/: Dockerfile.collector  Dockerfile.dashboard  docker-compose.yml
docs/: architecture.md  contributing.md  installation.md  releasing.md
examples/fastapi-demo/: README.md  main.py  pyproject.toml
sdk/: LICENSE  README.md  pyproject.toml
sdk/mateobserve/: __init__.py  cli.py  client.py  config.py  middleware.py
sdk/mateobserve/data/: docker-compose.yml
tests/: pyproject.toml  test_installation_smoke.py
tests/collector/: test_routes.py
tests/integration/: test_fastapi_integration.py
tests/sdk/: test_cli.py  test_client.py  test_config.py  test_middleware.py
