[project]
name = "mateobserve"
version = "0.1.1"
description = "Simple API observability in 30 seconds 🧉"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MateObserve Contributors"}
]
keywords = ["observability", "monitoring", "api", "fastapi", "middleware", "metrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "httpx>=0.24.0",
    "starlette>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/TobiasVeiga00/mateobserve"
Documentation = "https://github.com/TobiasVeiga00/mateobserve/tree/main/docs"
Repository = "https://github.com/TobiasVeiga00/mateobserve"
Issues = "https://github.com/TobiasVeiga00/mateobserve/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mateobserve"]

[project.scripts]
mateobserve = "mateobserve.cli:main"

[tool.hatch.build]
license-files = ["LICENSE"]