[project]
name = "mateobserve-tests"
version = "0.1.0"
description = "Test suite for MateObserve"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.24.0",
    "starlette>=0.20.0",
    "mateobserve",
    "fastapi>=0.104.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "alembic>=1.13.0",
]

[tool.uv.sources]
mateobserve = { path = "../sdk", editable = true }

[tool.pytest.ini_options]
testpaths = ["."]
asyncio_mode = "auto"
